--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.19.0",
     "express-handlebars": "^7.1.2",
+    "method-override": "^3.0.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.2",
     "nodemon": "^3.1.0",
