--- a/db/config/config.json
+++ b/db/config/config.json
@@ -14,10 +14,13 @@
     "dialect": "postgres"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "make-parties",
-    "host": "127.0.0.1",
-    "dialect": "postgres"
-  }
+    "use_env_variable": "DATABASE_URL",
+    "dialect": "postgres",
+    "dialectOptions": {
+       "ssl": {
+         "require": true,
+         "rejectUnauthorized": false
+       }
+     }
+   }
 }
