--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@handlebars/allow-prototype-access": "^1.0.5",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "express": "^4.19.0",
     "express-handlebars": "^7.1.2",
+    "express-session": "^1.18.0",
+    "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
     "moment": "^2.30.1",
     "mysql": "^2.18.1",
